[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/art/sc_level/sprites/jumping_eagor/jumping_eagor_short.png" type="Texture" id=1]
[ext_resource path="res://assets/art/sc_level/sprites/jumping_eagor/jumping_eagor_tall.png" type="Texture" id=2]
[ext_resource path="res://assets/code/sc_level/jumping_eagor.gd" type="Script" id=3]
[ext_resource path="res://assets/gui/hud/enemy_healthbar.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sounds/object_sounds/SD21_sword_hit.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.9512, 16.3823 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.0312, 15.4623 )

[node name="jumping_eagor" type="KinematicBody2D" groups=[
"enemy",
]]
script = ExtResource( 3 )

[node name="Sprites" type="Node2D" parent="."]

[node name="Jump" type="Sprite" parent="Sprites"]
visible = false
texture = ExtResource( 2 )
flip_h = true

[node name="ReadyJump" type="Sprite" parent="Sprites"]
texture = ExtResource( 1 )
flip_h = true

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2( 0.262863, 0.525719 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0.0901961, 0.615686, 1, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.262863, 0.525719 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
process_parent = true
physics_process_parent = true

[node name="sword_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="healthbar" parent="." instance=ExtResource( 4 )]
margin_left = -7.62543
margin_top = -41.6051
margin_right = 8.37457
margin_bottom = -35.6051
[connection signal="death" from="." to="." method="_on_jumping_eagor_death"]
[connection signal="health_changed" from="." to="." method="_on_jumping_eagor_health_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
